samples/_failures_safe/1761556541_d81aff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_270f5ad3.c: In function ‘main’:
./samples/SAFE/__tmp_270f5ad3.c:149:9: error: expected declaration or statement at end of input
  149 |         printf("2. Add matrices (A + B)\n");
      |         ^~~~~~
./samples/SAFE/__tmp_270f5ad3.c:149:9: error: expected declaration or statement at end of input
